K8s-scripts/networking/ingress-resource.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  backend:
    serviceName: test-svc
    servicePort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
    http:
      paths: 
      - path: /wear
        backend:
          serviceName: wear-service
          servicePort: 80
        
      - path: /watch
        backend:
          serviceName: watch-service
          servicePort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - host: wear.my-online-store.com
    http:
      paths: 
      - backend:
          serviceName: wear-service
          servicePort: 80
  - host: watch.my-online-store.com
    http:
      paths: 
      - backend:
          serviceName: watch-service
          servicePort: 80
